fix the error of selenium model

--- a/webmagic-selenium/config.ini
+++ b/webmagic-selenium/config.ini
@@ -1,6 +1,6 @@
 # What WebDriver to use for the tests
-driver=phantomjs
-#driver=firefox
+#driver=phantomjs
+driver=firefox
 #driver=chrome
 #driver=http://localhost:8910
 #driver=http://localhost:4444/wd/hub
