--- a/webmagic-selenium/pom.xml
+++ b/webmagic-selenium/pom.xml
@@ -13,8 +13,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-remote-driver</artifactId>
+			<version>2.49.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>2.46.0</version>
+			<version>2.49.1</version>
 		</dependency>
 		<dependency>
 			<groupId>us.codecraft</groupId>
